# MacBlox

./: .gitignore  .gitmodules  CMakeLists.txt  Install.sh  LICENSE  Macblox.plist  Makefile  README.md  appify  appify_background  create_frameworks.sh  fixInstall.sh  installer.json  vcpkg.json
.github/workflows/: arm.yml  c-cpp.yml  smart_join.yml  x86_64.yml
GameWatcher/GameWatcher/: AppDelegate.h  AppDelegate.m  Logger.h  Main_Helper.h  Main_Helper.m  main.m
GameWatcher/GameWatcher.xcodeproj/: project.pbxproj
GameWatcher/GameWatcher.xcodeproj/xcshareddata/xcschemes/: GameWatcher.xcscheme
GameWatcher/GameWatcher/Base.lproj/: MainMenu.xib
GameWatcherApp/: README.txt
Images/: icon.icns
Macblox.app/Contents/: Info.plist
Macblox.app/Contents/MacOS/: Macblox
Resources/: README.txt
Resources/Mods/: OldAvatarBackground.rbxl
Smart Join/: Smart-Join-Info.plist
Smart Join/Smart Join/: AppDelegate.h  AppDelegate.m  main.m  main_helper.h  main_helper.m
Smart Join/Smart Join.xcodeproj/: project.pbxproj
Smart Join/Smart Join.xcodeproj/project.xcworkspace/xcuserdata/edward.xcuserdatad/: UserInterfaceState.xcuserstate
Smart Join/Smart Join.xcodeproj/xcuserdata/edward.xcuserdatad/xcschemes/: xcschememanagement.plist
Smart Join/Smart Join/Base.lproj/: MainMenu.xib
Smart Join/Smart JoinTests/: Smart_JoinTests.m
Smart Join/Smart JoinUITests/: Smart_JoinUITests.m  Smart_JoinUITestsLaunchTests.m
background/: AppDelegate.m  AppDelegate.mm  BackgroundTask.h  BackgroundTask.mm  main.m
bootstrap/: app.h  app.mm  autoUpdater.h  autoUpdater.mm  bootstrap_data.json  frame.h  helper.h  helper.mm  helper.sh  multi.h  multi.mm  tinyxml2.cpp  tinyxml2.h
bulid/: installer  runner
examples/: decode_json.script.lua  flags.script.lua  print.script.lua  run_system.script.lua
installer/: Makefile  installer  main.cpp
installer/roblox_data/: roblox_data.json
installer/roblox_data/Roblox.app/Contents/: Info.plist
installer/roblox_data/Roblox.app/Contents/Resources/: default.metallib
installer/roblox_data/Roblox.app/Contents/Resources/MainMenu.nib/: keyedobjects-101300.nib  keyedobjects.nib
installer/roblox_data/Roblox.app/Contents/Resources/de.lproj/: InfoPlist.strings  Localizable.strings
installer/roblox_data/Roblox.app/Contents/Resources/en.lproj/: InfoPlist.strings  Localizable.strings
installer/roblox_data/Roblox.app/Contents/Resources/es.lproj/: InfoPlist.strings  Localizable.strings
installer/roblox_data/Roblox.app/Contents/Resources/fr.lproj/: InfoPlist.strings  Localizable.strings
installer/roblox_data/Roblox.app/Contents/Resources/it.lproj/: Localizable.strings
installer/roblox_data/Roblox.app/Contents/Resources/ja.lproj/: InfoPlist.strings  Localizable.strings
installer/roblox_data/Roblox.app/Contents/_CodeSignature/: CodeResources
installer/roblox_data/RobloxPlayerInstaller.app/Contents/: Info.plist
installer/roblox_data/RobloxPlayerInstaller.app/Contents/Resources/: RobloxPlayerInstaller.scpt
installer/roblox_data/RobloxPlayerInstaller.app/Contents/_CodeSignature/: CodeResources
main_app/: Downloader.h  Downloader.mm  EditableListBox.h  TimedAlert.h  frame.h  main.cpp  main.mm  window.h
openRoblox/: AppDelegate.mm  main.m
runner/: AppDelegate.h  AppDelegate.mm  Logger.h  Makefile  discord.py  discord_old.py  helper.h  helper.mm  main  main.cpp  main.m  main_helper.h  main_helper.mm
runner/functions/: api.h  function_wrapper.h  main_helper.h  write.h
runner/sol/: config.hpp  forward.hpp  sol.hpp
test/: main.cpp
(+49 files in other folders)
